CSS: Attempt to prevent text overflow in older browsers

--- a/public/css/irn.css
+++ b/public/css/irn.css
@@ -92,8 +92,13 @@ body {
   margin: 0;
   padding: 0;
   height: auto;
-  overflow-wrap: break-word;
+  word-break: break-word;
   word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
+p, a {
+  overflow: hidden;
 }
 
 html {
